worked on styles

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
-            <a class="navbar-brand" href="#">Bryan Pero</a>
+            <a class="navbar-brand" href="#"><strong>Bryan Pero</strong></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -41,8 +41,8 @@
 
 
     <div class="container">
-        <h1>About Me</h1>
-        <img src="assets/images/profile.jpg" align="left" width="50%">
+        <h2>About Me</h2>
+        <img src="assets/images/profile.jpg" align="left" width="25%" margin-right="20px">
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga quia provident velit delectus dolor quidem
             iure repudiandae molestiae culpa sed optio illo ab molestias numquam quis, ipsum vel eveniet reiciendis</p>
         <P>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus eligendi assumenda consequuntur vel
@@ -52,6 +52,17 @@
             similique blanditiis ipsum, est obcaecati quidem dolore, repellendus laudantium voluptates facere ut
             temporibus deserunt maiores!
         </P>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Expedita culpa tempora vero esse, incidunt sequi
+            repellat? Eius consequuntur perspiciatis itaque ullam deserunt ratione debitis doloribus, ipsam mollitia
+            libero amet deleniti.Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus eligendi assumenda
+            consequuntur vel
+            molestiae architecto tempora odit tempore ut voluptatem, ex laborum obcaecati, neque officiis. Consequuntur
+            qui eius soluta vitae.Lorem
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit delectus molestias, illum ab nisi iste
+            similique blanditiis ipsum, est obcaecati quidem dolore, repellendus laudantium voluptates facere ut
+            temporibus deserunt maiores!
+
+        </p>
 
     </div>
 
