Worked on Portfolio page

--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
         </div>
 
     </nav>
-    <main class="container">
+    <main class="container" class="row" class="col">
         <h1>Contact</h1>
         <form>
             <div class="form-group">
