--- a/index.html
+++ b/index.html
@@ -42,8 +42,10 @@
 
     <div class="container">
         <h2>About Me</h2>
-        <img src="assets/images/profile.jpg" align="left" width="25%" margin-right="20px">
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga quia provident velit delectus dolor quidem
+        <img src="assets/images/profile.jpg" align="left" width="25%" margin-right="20px"
+            alt="Prfile picture of Bryan Pero">
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga quia provident velit delectus
+            dolor quidem
             iure repudiandae molestiae culpa sed optio illo ab molestias numquam quis, ipsum vel eveniet reiciendis</p>
         <P>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus eligendi assumenda consequuntur vel
             molestiae architecto tempora odit tempore ut voluptatem, ex laborum obcaecati, neque officiis. Consequuntur
