--- a/portfolio.html
+++ b/portfolio.html
@@ -38,8 +38,32 @@
         </div>
 
     </nav>
+    <main class="container">
+        <h1>Portfolio</h1>
+        <div class="row">
+            <div class="col-lg-4">
+                <img src="http://placekitten.com/300/300">
+            </div>
+            <div class="col-lg-4">
+                <img src="http://placekitten.com/300/300">
+            </div>
+            <div class="col-lg-4">
+                <img src="http://placekitten.com/300/300">
+            </div>
 
-    <h1>portfolio</h1>
+        </div>
+        <div class="row">
+            <div class="col-lg-4">
+                <img src="http://placekitten.com/300/300">
+            </div>
+            <div class="col-lg-4">
+                <img src="http://placekitten.com/300/300">
+            </div>
+            <div class="col-lg-4">
+                <img src="http://placekitten.com/300/300">
+            </div>
+        </div>
+    </main>
 </body>
 
 </html>
