worked more on all pages

--- a/index.html
+++ b/index.html
@@ -5,10 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bryan Pero Portfolio</title>
-
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
     <link rel="stylesheet" href="/assets/css/styles.css">
 </head>
 
@@ -40,33 +38,28 @@
     </nav>
 
 
-    <div class="container">
+    <main class="container">
         <h2>About Me</h2>
-        <img src="assets/images/profile.jpg" align="left" width="25%" margin-right="20px"
-            alt="Prfile picture of Bryan Pero">
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga quia provident velit delectus
-            dolor quidem
-            iure repudiandae molestiae culpa sed optio illo ab molestias numquam quis, ipsum vel eveniet reiciendis</p>
-        <P>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus eligendi assumenda consequuntur vel
-            molestiae architecto tempora odit tempore ut voluptatem, ex laborum obcaecati, neque officiis. Consequuntur
-            qui eius soluta vitae.Lorem
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit delectus molestias, illum ab nisi iste
-            similique blanditiis ipsum, est obcaecati quidem dolore, repellendus laudantium voluptates facere ut
-            temporibus deserunt maiores!
-        </P>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Expedita culpa tempora vero esse, incidunt sequi
-            repellat? Eius consequuntur perspiciatis itaque ullam deserunt ratione debitis doloribus, ipsam mollitia
-            libero amet deleniti.Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus eligendi assumenda
-            consequuntur vel
-            molestiae architecto tempora odit tempore ut voluptatem, ex laborum obcaecati, neque officiis. Consequuntur
-            qui eius soluta vitae.Lorem
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit delectus molestias, illum ab nisi iste
-            similique blanditiis ipsum, est obcaecati quidem dolore, repellendus laudantium voluptates facere ut
-            temporibus deserunt maiores!
+        <hr />
+        <div class="row">
+            <div class="col-sm-6 col-lg-3">
+                <img src="assets/images/profile2.jpg" class="img-fluid" alt="Prfile picture of Bryan Pero">
+            </div>
 
-        </p>
+            <article class="col-sm-6 col-lg-3">
+                <P>My name is Bryan Pero and I'm a fledgling Web Developer currently attenting the Trilogy Coding
+                    Bootcamp hosted by UNH. I'm a complete newbie to coding which is why this portfolio site, in many
+                    ways, probably looks like total crap. Hopefully this will change in the coming months. Thank you for
+                    bearing with me.
 
-    </div>
+                </P>
+            </article>
+
+
+        </div>
+
+
+    </main>
 
 </body>
 
