--- a/portfolio.html
+++ b/portfolio.html
@@ -40,27 +40,58 @@
     </nav>
     <main class="container">
         <h1>Portfolio</h1>
+        <hr />
         <div class="row">
             <div class="col-lg-4">
-                <img src="http://placekitten.com/300/300">
+                <div class="card" style="width: 18rem;">
+                    <img src="http://placekitten.com/300/300" class="card-img-top" alt="a picture of a kitten">
+                    <div class="card-body">
+                        <p class="card-text">Amazing example of future me's coding powers!</p>
+                    </div>
+                </div>
             </div>
             <div class="col-lg-4">
-                <img src="http://placekitten.com/300/300">
+                <div class="card" style="width: 18rem;">
+                    <img src="http://placekitten.com/300/300" class="card-img-top" alt="a picture of a kitten">
+                    <div class="card-body">
+                        <p class="card-text">Amazing example of future me's coding powers!</p>
+                    </div>
+                </div>
             </div>
             <div class="col-lg-4">
-                <img src="http://placekitten.com/300/300">
+                <div class="card" style="width: 18rem;">
+                    <img src="http://placekitten.com/300/300" class="card-img-top" alt="a picture of a kitten">
+                    <div class="card-body">
+                        <p class="card-text">Amazing example of future me's coding powers!</p>
+                    </div>
+                </div>
             </div>
 
         </div>
         <div class="row">
             <div class="col-lg-4">
-                <img src="http://placekitten.com/300/300">
+                <div class="card" style="width: 18rem;">
+                    <img src="http://placekitten.com/300/300" class="card-img-top" alt="a picture of a kitten">
+                    <div class="card-body">
+                        <p class="card-text">Amazing example of future me's coding powers!</p>
+                    </div>
+                </div>
             </div>
             <div class="col-lg-4">
-                <img src="http://placekitten.com/300/300">
+                <div class="card" style="width: 18rem;">
+                    <img src="http://placekitten.com/300/300" class="card-img-top" alt="a picture of a kitten">
+                    <div class="card-body">
+                        <p class="card-text">Amazing example of future me's coding powers!</p>
+                    </div>
+                </div>
             </div>
             <div class="col-lg-4">
-                <img src="http://placekitten.com/300/300">
+                <div class="card" style="width: 18rem;">
+                    <img src="http://placekitten.com/300/300" class="card-img-top" alt="a picture of a kitten">
+                    <div class="card-body">
+                        <p class="card-text">Amazing example of future me's coding powers!</p>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
