worked on footer and portfolio page links

--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,13 @@
             <input class="btn btn-primary" type="submit" value="Submit">
         </form>
     </main>
+    <footer class="page-footer font-small blue">
 
+        <div class="footer-copyright text-center py-3">© 2020 Copyright Bryan Pero
+        </div>
+
+    </footer>
 </body>
+
 
 </html>
