--- a/index.html
+++ b/index.html
@@ -58,9 +58,14 @@
 
         </div>
 
-
     </main>
+    <footer class="page-footer font-small blue">
 
+        <div class="footer-copyright text-center py-3">© 2020 Copyright Bryan Pero
+        </div>
+
+    </footer>
 </body>
+
 
 </html>
