--- a/portfolio.html
+++ b/portfolio.html
@@ -44,20 +44,30 @@
         <div class="row">
             <div class="col-lg-4">
                 <div class="card" style="width: 18rem;">
-                    <img src="http://placekitten.com/300/300" class="card-img-top" alt="a picture of a kitten">
+                    <img src="assets/images/profile2.jpg" class="card-img-top" alt="a picture of a kitten">
                     <div class="card-body">
-                        <p class="card-text">Amazing example of future me's coding powers!</p>
+                        <a href="https://github.com/zosotherover" target="_blank">
+                            <figure class="label">
+                                <h4>Bryan's GitHub</h4>
+                            </figure>
+                        </a>
                     </div>
                 </div>
             </div>
             <div class="col-lg-4">
                 <div class="card" style="width: 18rem;">
-                    <img src="http://placekitten.com/300/300" class="card-img-top" alt="a picture of a kitten">
+                    <img src="assets/images/BP-Facebook.jpg" class="card-img-top" alt="a picture of a kitten">
                     <div class="card-body">
-                        <p class="card-text">Amazing example of future me's coding powers!</p>
+                        <a href="https://facebook.com/bryanpero" target="_blank">
+                            <figure class="label">
+                                <h4>Bryan's Facebook</h4>
+                            </figure>
+                        </a>
+
                     </div>
                 </div>
             </div>
+
             <div class="col-lg-4">
                 <div class="card" style="width: 18rem;">
                     <img src="http://placekitten.com/300/300" class="card-img-top" alt="a picture of a kitten">
@@ -72,7 +82,7 @@
             <div class="col-lg-4">
                 <div class="card" style="width: 18rem;">
                     <img src="http://placekitten.com/300/300" class="card-img-top" alt="a picture of a kitten">
-                    <div class="card-body">
+                    > <div class="card-body">
                         <p class="card-text">Amazing example of future me's coding powers!</p>
                     </div>
                 </div>
@@ -95,6 +105,13 @@
             </div>
         </div>
     </main>
+    <footer class="page-footer font-small blue">
+
+        <div class="footer-copyright text-center py-3">© 2020 Copyright Bryan Pero
+        </div>
+
+    </footer>
 </body>
+
 
 </html>
