worked on all pages

--- a/index.html
+++ b/index.html
@@ -1,71 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bryan Pero Portfolio</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="/assets/css/styles.css">
-</head>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="/assets/css/styles.css" />
+  </head>
 
-<body>
-
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container">
-            <a class="navbar-brand" href="#"><strong>Bryan Pero</strong></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="portfolio.html">Portfolio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">About</a>
-                    </li>
-
-                </ul>
-            </div>
+  <body>
+    <nav class="navbar sticky navbar-expand-lg navbar-light bg-light">
+      <div class="container">
+        <a class="navbar-brand" href="#"><strong>Bryan Pero</strong></a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">Contact</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="portfolio.html">Portfolio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">About</a>
+            </li>
+          </ul>
         </div>
-
+      </div>
     </nav>
 
-
     <main class="container">
-        <h2>About Me</h2>
-        <hr />
-        <div class="row">
-            <div class="col-sm-6 col-lg-3">
-                <img src="assets/images/profile2.jpg" class="img-fluid" alt="Prfile picture of Bryan Pero">
-            </div>
-
-            <article class="col-sm-6 col-lg-3">
-                <P>My name is Bryan Pero and I'm a fledgling Web Developer currently attenting the Trilogy Coding
-                    Bootcamp hosted by UNH. I'm a complete newbie to coding which is why this portfolio site, in many
-                    ways, probably looks like total crap. Hopefully this will change in the coming months. Thank you for
-                    bearing with me.
-
-                </P>
-            </article>
-
-
+      <h2>Bryan Pero</h2>
+      <hr />
+      <div class="row">
+        <div class="col md-3 pull-left">
+          <img
+            src="assets/images/profile2.jpg"
+            class="profile"
+            alt="Profile picture of Bryan Pero"
+          />
         </div>
 
+        <div class="col sm-6">
+          <p>
+            My name is Bryan Pero and I'm a fledgling Web Developer currently
+            attenting the Trilogy Coding Bootcamp hosted by UNH.
+          </p>
+
+          <p>
+            I currently work as a Security Supervisor at the Harvard Business
+            School.
+          </p>
+        </div>
+      </div>
     </main>
     <footer class="page-footer font-small blue">
-
-        <div class="footer-copyright text-center py-3">© 2020 Copyright Bryan Pero
-        </div>
-
+      <div class="footer-copyright text-center py-3">
+        © 2020 Copyright Bryan Pero
+      </div>
     </footer>
-</body>
-
-
+  </body>
 </html>
