--- a/portfolio.html
+++ b/portfolio.html
@@ -1,117 +1,126 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bryan Pero Portfolio</title>
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+      crossorigin="anonymous"
+    />
 
-    <link rel="stylesheet" href="/assets/css/styles.css">
-</head>
+    <link rel="stylesheet" href="/assets/css/styles.css" />
+  </head>
 
-<body>
-
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container">
-            <a class="navbar-brand" href="#"><strong>Bryan Pero</strong></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="portfolio.html">Portfolio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">About</a>
-                    </li>
-
-                </ul>
-            </div>
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-secondary">
+      <div class="container">
+        <a class="navbar-brand" href="#"><strong>Bryan Pero</strong></a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">Contact</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="portfolio.html">Portfolio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">About</a>
+            </li>
+          </ul>
         </div>
-
+      </div>
     </nav>
     <main class="container">
-        <h1>Portfolio</h1>
-        <hr />
-        <div class="row">
-            <div class="col-lg-4">
-                <div class="card" style="width: 18rem;">
-                    <img src="assets/images/profile2.jpg" class="card-img-top" alt="a picture of a kitten">
-                    <div class="card-body">
-                        <a href="https://github.com/zosotherover" target="_blank">
-                            <figure class="label">
-                                <h4>Bryan's GitHub</h4>
-                            </figure>
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4">
-                <div class="card" style="width: 18rem;">
-                    <img src="assets/images/BP-Facebook.jpg" class="card-img-top" alt="a picture of a kitten">
-                    <div class="card-body">
-                        <a href="https://facebook.com/bryanpero" target="_blank">
-                            <figure class="label">
-                                <h4>Bryan's Facebook</h4>
-                            </figure>
-                        </a>
+      <h1>Portfolio</h1>
+      <hr />
 
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-lg-4">
-                <div class="card" style="width: 18rem;">
-                    <img src="http://placekitten.com/300/300" class="card-img-top" alt="a picture of a kitten">
-                    <div class="card-body">
-                        <p class="card-text">Amazing example of future me's coding powers!</p>
-                    </div>
-                </div>
-            </div>
-
+      <div class="card mt-5 text-center" style="width: 100%;">
+        <div class="card-body">
+          <h5 class="card-title">My GitHub Profile</h5>
+          <img
+            src="assets/images/GitHubPic.jpg"
+            alt="Bryan Profie picture"
+            height="300"
+            width="400px"
+          />
+          <p class="card-text"></p>
+          <a
+            href="https://github.com/zosotherover"
+            target="blank"
+            class="btn btn-primary"
+            >Bryan's GitHub</a
+          >
         </div>
-        <div class="row">
-            <div class="col-lg-4">
-                <div class="card" style="width: 18rem;">
-                    <img src="http://placekitten.com/300/300" class="card-img-top" alt="a picture of a kitten">
-                    > <div class="card-body">
-                        <p class="card-text">Amazing example of future me's coding powers!</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4">
-                <div class="card" style="width: 18rem;">
-                    <img src="http://placekitten.com/300/300" class="card-img-top" alt="a picture of a kitten">
-                    <div class="card-body">
-                        <p class="card-text">Amazing example of future me's coding powers!</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4">
-                <div class="card" style="width: 18rem;">
-                    <img src="http://placekitten.com/300/300" class="card-img-top" alt="a picture of a kitten">
-                    <div class="card-body">
-                        <p class="card-text">Amazing example of future me's coding powers!</p>
-                    </div>
-                </div>
-            </div>
+      </div>
+
+      <div class="card mt-5 text-center" style="width: 100%;">
+        <div class="card-body">
+          <h5 class="card-title">Blue Skies</h5>
+          <img
+            src="assets/images/Logo-blue.png"
+            alt="Blue Skies logo"
+            height="300"
+            width="400px"
+          />
+          <p class="card-text">
+            This is an application that allows users to search National Parks
+            information andn also provides the weather for any given park.
+          </p>
+          <a
+            href="https://fleshborne.github.io/Blue-Skies/"
+            target="blank"
+            class="btn btn-primary"
+            >Blue Skies</a
+          >
         </div>
+      </div>
+
+      <div class="card mt-5 text-center" style="width: 100%;">
+        <div class="card-body">
+          <h5 class="card-title">The Simpsons Quiz</h5>
+          <img
+            src="assets/images/SimpsonsQuiz.PNG"
+            alt="Simpsons quiz pic"
+            height="300"
+            width="400px"
+          />
+          <p class="card-text">
+            A fun Simpsons-based trivia game
+          </p>
+          <a
+            href="https://zosotherover.github.io/code-quiz/"
+            target="blank"
+            class="btn btn-primary"
+            >The Simpsons Quiz</a
+          >
+        </div>
+      </div>
+
+      <div class="card mt-5 text-center" style="width: 100%;">
+        <div class="card-body">
+          <h5 class="card-title">Special title treatment</h5>
+          <p class="card-text">
+            With supporting text below as a natural lead-in to additional
+            content.
+          </p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
     </main>
-    <footer class="page-footer font-small blue">
-
-        <div class="footer-copyright text-center py-3">© 2020 Copyright Bryan Pero
-        </div>
-
-    </footer>
-</body>
-
-
+  </body>
 </html>
