worked on all pages

--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
   </head>
 
   <body>
-    <nav class="navbar sticky-top navbar-custom">
+    <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
       <div class="container">
         <a class="navbar-brand" href="#"><strong>Bryan Pero</strong></a>
         <button
@@ -48,36 +48,14 @@
     <main class="container" class="row" class="col">
       <h1>Contact</h1>
       <hr />
-      <form>
-        <div class="form-group">
-          <label for="exampleFormControlInput1">Name</label>
-          <input
-            type="email"
-            class="form-control"
-            id="exampleFormControlInput1"
-            placeholder="John Smith"
-          />
-        </div>
-        <div class="form-group">
-          <label for="exampleFormControlInput1">Email address</label>
-          <input
-            type="email"
-            class="form-control"
-            id="exampleFormControlInput1"
-            placeholder="name@example.com"
-          />
-        </div>
-
-        <div class="form-group">
-          <label for="exampleFormControlTextarea1">Message</label>
-          <textarea
-            class="form-control"
-            id="exampleFormControlTextarea1"
-            rows="3"
-          ></textarea>
-        </div>
-        <input class="btn btn-primary" type="submit" value="Submit" />
-      </form>
+      <ul>
+        <li>Email: bryanpero@gmail.com</li>
+        <li><a
+            href="https://www.linkedin.com/in/bryan-pero-b52a691aa/"
+            target="blank"
+        
+            >Bryan's LinkedIn Page</a</li>
+      </ul>
     </main>
     <footer class="page-footer font-small blue">
       <div class="footer-copyright text-center py-3">
