worked on all pages

--- a/index.html
+++ b/index.html
@@ -45,27 +45,21 @@
     </nav>
 
     <main class="container">
-      <h2>Bryan Pero</h2>
-      <hr />
-      <div class="row">
-        <div class="col md-3 pull-left">
+      <div class="card mt-5 text-center" style="width: 100%;">
+        <div class="card-body">
+          <h5 class="card-title">Bryan Pero</h5>
           <img
             src="assets/images/profile2.jpg"
+            alt="Bryan profile pic"
             class="profile"
-            alt="Profile picture of Bryan Pero"
+            height="300"
+            width="300px"
           />
-        </div>
-
-        <div class="col sm-6">
-          <p>
+          <p class="card-text">
             My name is Bryan Pero and I'm a fledgling Web Developer currently
             attenting the Trilogy Coding Bootcamp hosted by UNH.
           </p>
-
-          <p>
-            I currently work as a Security Supervisor at the Harvard Business
-            School.
-          </p>
+          <p></p>
         </div>
       </div>
     </main>
