--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-secondary">
+    <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
       <div class="container">
         <a class="navbar-brand" href="#"><strong>Bryan Pero</strong></a>
         <button
@@ -48,25 +48,6 @@
     <main class="container">
       <h1>Portfolio</h1>
       <hr />
-
-      <div class="card mt-5 text-center" style="width: 100%;">
-        <div class="card-body">
-          <h5 class="card-title">My GitHub Profile</h5>
-          <img
-            src="assets/images/GitHubPic.jpg"
-            alt="Bryan Profie picture"
-            height="300"
-            width="400px"
-          />
-          <p class="card-text"></p>
-          <a
-            href="https://github.com/zosotherover"
-            target="blank"
-            class="btn btn-primary"
-            >Bryan's GitHub</a
-          >
-        </div>
-      </div>
 
       <div class="card mt-5 text-center" style="width: 100%;">
         <div class="card-body">
@@ -113,12 +94,42 @@
 
       <div class="card mt-5 text-center" style="width: 100%;">
         <div class="card-body">
-          <h5 class="card-title">Special title treatment</h5>
+          <h5 class="card-title">Weather Dashboard</h5>
+          <img
+            src="assets/images/WeatherDashboard.PNG"
+            alt="weather dashboard pic"
+            height="300"
+            width="400px"
+          />
           <p class="card-text">
-            With supporting text below as a natural lead-in to additional
-            content.
+            A weather application that provides current weather and the 5-day
+            forecast.
           </p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <a
+            href="https://zosotherover.github.io/weather-dashboard/"
+            target="blank"
+            class="btn btn-primary"
+            >Weather Dashboard</a
+          >
+        </div>
+      </div>
+
+      <div class="card mt-5 text-center" style="width: 100%;">
+        <div class="card-body">
+          <h5 class="card-title">My GitHub Profile</h5>
+          <img
+            src="assets/images/GitHubPic.jpg"
+            alt="Bryan Profie picture"
+            height="300"
+            width="400px"
+          />
+          <p class="card-text"></p>
+          <a
+            href="https://github.com/zosotherover"
+            target="blank"
+            class="btn btn-primary"
+            >Bryan's GitHub</a
+          >
         </div>
       </div>
     </main>
