--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <main class="container">
       <div class="card mt-5 text-center" style="width: 100%;">
         <div class="card-body">
-          <h5 class="card-title">Bryan Pero</h5>
+          <h5 class="card-title">Full Stack Developer Student</h5>
           <img
             src="assets/images/profile2.jpg"
             alt="Bryan profile pic"
