--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
         </div>
       </div>
     </main>
-    <footer class="page-footer font-small blue">
+    <!--<footer class="page-footer font-small blue">
       <div class="footer-copyright text-center py-3">
         © 2020 Copyright Bryan Pero
       </div>
-    </footer>
+    </footer> -->
   </body>
 </html>
