updated portfolia w/project 2

--- a/portfolio.html
+++ b/portfolio.html
@@ -1,137 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bryan Pero Portfolio</title>
 
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
-      crossorigin="anonymous"
-    />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Bryan Pero Portfolio</title>
 
-    <link rel="stylesheet" href="assets/css/styles.css" />
-  </head>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
 
-  <body>
-    <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
-      <div class="container">
-        <a class="navbar-brand" href="#"><strong>Bryan Pero</strong></a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-toggle="collapse"
-          data-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="portfolio.html">Portfolio</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="index.html">About</a>
-            </li>
-          </ul>
-        </div>
+  <link rel="stylesheet" href="assets/css/styles.css" />
+</head>
+
+<body>
+  <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
+    <div class="container">
+      <a class="navbar-brand" href="#"><strong>Bryan Pero</strong></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">Contact</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="portfolio.html">Portfolio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">About</a>
+          </li>
+        </ul>
       </div>
-    </nav>
-    <main class="container">
-      <h1>Portfolio</h1>
-      <hr />
+    </div>
+  </nav>
+  <main class="container">
+    <h1>Portfolio</h1>
+    <hr />
 
-      <div class="card mt-5 text-center" style="width: 100%;">
-        <div class="card-body">
-          <h5 class="card-title">Blue Skies</h5>
-          <img
-            src="assets/images/Logo-blue.png"
-            alt="Blue Skies logo"
-            height="300"
-            width="400px"
-          />
-          <p class="card-text">
-            This is an application that allows users to search National Parks
-            information andn also provides the weather for any given park.
-          </p>
-          <a
-            href="https://fleshborne.github.io/Blue-Skies/"
-            target="blank"
-            class="btn btn-primary"
-            >Blue Skies</a
-          >
-        </div>
+    <div class="card mt-5 text-center" style="width: 100%;">
+      <div class="card-body">
+        <h5 class="card-title">Recipe Box</h5>
+        <img src="assets/images/recipebox.PNG" alt="Recipe Box image" height="300" width="400px" />
+        <p class="card-text">
+          This full-stack app utilze a SQL database to store recipes that the user can view. Users can also search for
+          recipes in using multiple different search parameters, add new recipes of their own, comment on recipes, email
+          a recipe to someone and share recipes on social media. This application also has a "Favorites" recipe page
+          that shows the most "liked" recipes.
+        </p>
+        <a href="https://fast-mountain-43531.herokuapp.com/index.html" target="blank" class="btn btn-primary">Recipe
+          Box</a>
       </div>
+    </div>
 
-      <div class="card mt-5 text-center" style="width: 100%;">
-        <div class="card-body">
-          <h5 class="card-title">The Simpsons Quiz</h5>
-          <img
-            src="assets/images/SimpsonsQuiz.PNG"
-            alt="Simpsons quiz pic"
-            height="300"
-            width="400px"
-          />
-          <p class="card-text">
-            A fun Simpsons-based trivia game
-          </p>
-          <a
-            href="https://zosotherover.github.io/code-quiz/"
-            target="blank"
-            class="btn btn-primary"
-            >The Simpsons Quiz</a
-          >
-        </div>
+    <div class="card mt-5 text-center" style="width: 100%;">
+      <div class="card-body">
+        <h5 class="card-title">Blue Skies</h5>
+        <img src="assets/images/Logo-blue.png" alt="Blue Skies logo" height="300" width="400px" />
+        <p class="card-text">
+          This is an application that allows users to search National Parks
+          information andn also provides the weather for any given park.
+        </p>
+        <a href="https://fleshborne.github.io/Blue-Skies/" target="blank" class="btn btn-primary">Blue Skies</a>
       </div>
+    </div>
 
-      <div class="card mt-5 text-center" style="width: 100%;">
-        <div class="card-body">
-          <h5 class="card-title">Weather Dashboard</h5>
-          <img
-            src="assets/images/WeatherDashboard.PNG"
-            alt="weather dashboard pic"
-            height="300"
-            width="400px"
-          />
-          <p class="card-text">
-            A weather application that provides current weather and the 5-day
-            forecast.
-          </p>
-          <a
-            href="https://zosotherover.github.io/weather-dashboard/"
-            target="blank"
-            class="btn btn-primary"
-            >Weather Dashboard</a
-          >
-        </div>
+    <div class="card mt-5 text-center" style="width: 100%;">
+      <div class="card-body">
+        <h5 class="card-title">The Simpsons Quiz</h5>
+        <img src="assets/images/SimpsonsQuiz.PNG" alt="Simpsons quiz pic" height="300" width="400px" />
+        <p class="card-text">
+          A fun Simpsons-based trivia game
+        </p>
+        <a href="https://zosotherover.github.io/code-quiz/" target="blank" class="btn btn-primary">The Simpsons Quiz</a>
       </div>
+    </div>
 
-      <div class="card mt-5 text-center" style="width: 100%;">
-        <div class="card-body">
-          <h5 class="card-title">My GitHub Profile</h5>
-          <img
-            src="assets/images/GitHubPic.jpg"
-            alt="Bryan Profie picture"
-            height="300"
-            width="400px"
-          />
-          <p class="card-text"></p>
-          <a
-            href="https://github.com/zosotherover"
-            target="blank"
-            class="btn btn-primary"
-            >Bryan's GitHub</a
-          >
-        </div>
+    <div class="card mt-5 text-center" style="width: 100%;">
+      <div class="card-body">
+        <h5 class="card-title">Weather Dashboard</h5>
+        <img src="assets/images/WeatherDashboard.PNG" alt="weather dashboard pic" height="300" width="400px" />
+        <p class="card-text">
+          A weather application that provides current weather and the 5-day
+          forecast.
+        </p>
+        <a href="https://zosotherover.github.io/weather-dashboard/" target="blank" class="btn btn-primary">Weather
+          Dashboard</a>
       </div>
-    </main>
-  </body>
+    </div>
+
+    <div class="card mt-5 text-center" style="width: 100%;">
+      <div class="card-body">
+        <h5 class="card-title">My GitHub Profile</h5>
+        <img src="assets/images/GitHubPic.jpg" alt="Bryan Profie picture" height="300" width="400px" />
+        <p class="card-text"></p>
+        <a href="https://github.com/zosotherover" target="blank" class="btn btn-primary">Bryan's GitHub</a>
+      </div>
+    </div>
+  </main>
+</body>
+
 </html>
